force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Stage__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Stage__c</fullName>
    <description>This field specifies the current product package approval stage. If provided, this value should match one of the Stage pick list values configured for this financial institution. Optional and manually populated.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>