force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Status__c</fullName>
    <description>This field is optional and manually set (or set through workflow configuration). This field is used to specify the Status of the product package. Generally used in the approval process configuration.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Intermediately Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Intermediately Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Approval Step 1</fullName>
            </value>
            <value>
                <fullName>Approval Step 2</fullName>
            </value>
            <value>
                <fullName>Approval Step 3</fullName>
            </value>
            <value>
                <fullName>Approval Step 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>