force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__TCE__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__TCE__c</fullName>
    <description>This field is optional and manually set. This currency field is used to capture total exposure (Credit) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
    <label>TCE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>