force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Total_Affiliated_Exposure__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Total_Affiliated_Exposure__c</fullName>
    <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Affiliated Exposure to this Product Package.</description>
    <label>Total Affiliated Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>