force-app/main/default/objects/LLC_BI__Product_Package__c/fields/LLC_BI__Treasury_Annual_Operating_Cost__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Treasury_Annual_Operating_Cost__c</fullName>
    <description>Users populate this field with the approximate annual operating cost of originating and servicing any new treasury services an FI originates in the deal. By default, it is blank.</description>
    <inlineHelpText>The approximate annual operating cost in dollars for new treasury service products an FI originates in the deal outside of nCino.</inlineHelpText>
    <label>Treasury Annual Operating Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>