force-app/main/default/objects/LLC_BI__Product_Package__c/fields/NotestothePersonalFinancialStatemen__c.field-meta.xml
<CustomField>
    <fullName>NotestothePersonalFinancialStatemen__c</fullName>
    <label>Notes to Personal Financial Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>