force-app/main/default/objects/LLC_BI__Product_Package__c/fields/PolicyExceptionsCommentsNarrative__c.field-meta.xml
<CustomField>
    <fullName>PolicyExceptionsCommentsNarrative__c</fullName>
    <label>Policy Exceptions Comments Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>