force-app/main/default/objects/LLC_BI__Product_Package__c/fields/PrimaryNotestoHistoricalCashFlowNa__c.field-meta.xml
<CustomField>
    <fullName>PrimaryNotestoHistoricalCashFlowNa__c</fullName>
    <label>Primary Notes to Historical Cash Flow Na</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>