force-app/main/default/objects/LLC_BI__Product_Package__c/fields/PrimarySourcesofRepaymentInfoNarrat__c.field-meta.xml
<CustomField>
    <fullName>PrimarySourcesofRepaymentInfoNarrat__c</fullName>
    <label>Primary Sources of Repayment Info Narrat</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>