force-app/main/default/objects/LLC_BI__Product_Package__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Region object</description>
    <label>Region</label>
    <referenceTo>Region__c</referenceTo>
    <relationshipLabel>Product Packages</relationshipLabel>
    <relationshipName>Product_Packages</relationshipName>
    <type>Lookup</type>
</CustomField>