force-app/main/default/objects/LLC_BI__Product_Package__c/fields/SecondaryNotestoHistoricalCashFlow__c.field-meta.xml
<CustomField>
    <fullName>SecondaryNotestoHistoricalCashFlow__c</fullName>
    <label>Secondary Notes to Historical Cash Flow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>