force-app/main/default/objects/LLC_BI__Product_Package__c/fields/SecondarySourcesofRepaymentInfoNarr__c.field-meta.xml
<CustomField>
    <fullName>SecondarySourcesofRepaymentInfoNarr__c</fullName>
    <label>Secondary Sources of Repayment Info Narr</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>