force-app/main/default/objects/LLC_BI__Product_Package__c/fields/SensitivityAnalysisCashFlowCoverag__c.field-meta.xml
<CustomField>
    <fullName>SensitivityAnalysisCashFlowCoverag__c</fullName>
    <label>Sensitivity Analysis - Cash Flow Coverag</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>