force-app/main/default/objects/LLC_BI__Product_Package__c/fields/StrengthsNarrative__c.field-meta.xml
<CustomField>
    <fullName>StrengthsNarrative__c</fullName>
    <label>Strengths Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>