force-app/main/default/objects/LLC_BI__Product_Package__c/fields/TertiaryNotestoHistoricalCashFlow__c.field-meta.xml
<CustomField>
    <fullName>TertiaryNotestoHistoricalCashFlow__c</fullName>
    <label>Tertiary Notes to Historical Cash Flow</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>