force-app/main/default/objects/LLC_BI__Product_Package__c/fields/TertiarySourcesofRepaymentInfoNarra__c.field-meta.xml
<CustomField>
    <fullName>TertiarySourcesofRepaymentInfoNarra__c</fullName>
    <label>Tertiary Sources of Repayment Info Narra</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>