force-app/main/default/objects/LLC_BI__Product_Package__c/fields/Total_Relationship_Exposure__c.field-meta.xml
<CustomField>
    <fullName>Total_Relationship_Exposure__c</fullName>
    <formula>Household__r.Total_Relationship_Exposure__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Relationship Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>