force-app/main/default/objects/LLC_BI__Product_Package__c/fields/WeaknessesNarrative__c.field-meta.xml
<CustomField>
    <fullName>WeaknessesNarrative__c</fullName>
    <label>Weaknesses Narrative</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>