force-app/main/default/objects/LLC_BI__Product_Package__c/fields/X2nd_Approver__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Packages_2nd_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>