force-app/main/default/objects/LLC_BI__Product_Package__c/fields/zen_Highest_Amortized_Loan_Term__c.field-meta.xml
<CustomField>
    <fullName>zen_Highest_Amortized_Loan_Term__c</fullName>
    <description>Used to store the largest amortized loan term from the loans contained in the product package.</description>
    <label>Highest Amortized Loan Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>