force-app/main/default/objects/LLC_BI__Product_Package__c/fields/zen_Highest_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>zen_Highest_Loan_Amount__c</fullName>
    <description>Used to store the largest loan amount from the loans contained in the product package.</description>
    <label>Highest Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>