force-app/main/default/objects/LLC_BI__Product_Package__c/fields/zen_Send_to_Level_3__c.field-meta.xml
<CustomField>
    <fullName>zen_Send_to_Level_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to determine routing for 3rd approval level.</description>
    <label>Zenn</label>
    <type>Checkbox</type>
</CustomField>