force-app/main/default/objects/LLC_BI__Product_Package__c/recordTypes/Advanced_Deal.recordType-meta.xml
<RecordType>
    <fullName>Advanced_Deal</fullName>
    <active>true</active>
    <description>RT used for Advanced Deals</description>
    <label>Advanced Deal</label>
</RecordType>