force-app/main/default/objects/LLC_BI__Product_Package__c/recordTypes/Deal_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Deal_Proposal</fullName>
    <active>true</active>
    <description>RT used for Deal Proposal</description>
    <label>Deal Proposal</label>
</RecordType>