force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Abilene_CLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Abilene_CLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Abilene CLC</label>
    <queue>Abilene_CLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>