force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Abilene_RDLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Abilene_RDLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Abilene RDLC</label>
    <queue>Abilene_RDLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>