force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/B_College_Station_CLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>B_College_Station_CLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>B/College Station CLC</label>
    <queue>B_College_Station_CLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>