force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Board_of_Directors_Product_Package.listView-meta.xml
<ListView>
    <fullName>Board_of_Directors_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Board of Directors</label>
    <queue>Board_of_Directors</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>