force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Cleburne_CLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Cleburne_CLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Cleburne CLC</label>
    <queue>Cleburne_CLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>