force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Cleburne_RDLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Cleburne_RDLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Cleburne RDLC</label>
    <queue>Cleburne_RDLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>