force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Conroe_RDLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Conroe_RDLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Conroe RDLC</label>
    <queue>Conroe_RDLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>