force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Eastland_CLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Eastland_CLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Eastland CLC</label>
    <queue>Eastland_CLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>