force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/FFIN_DLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>FFIN_DLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>FFIN DLC</label>
    <queue>FFIN_DLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>