force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Fort_Worth_CLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Fort_Worth_CLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Fort Worth CLC</label>
    <queue>Fort_Worth_CLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>