force-app/main/default/objects/LLC_BI__Product_Package__c/listViews/Hereford_CLC_Product_Package.listView-meta.xml
<ListView>
    <fullName>Hereford_CLC_Product_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Hereford CLC</label>
    <queue>Hereford_CLC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>